feat: 스탬프 개수 커스터마이징 기능 추가
